# Articore-SDK

./: .gitignore  README.md  gripper_force_control.py  pyproject.toml
actuator/: __init__.py  arx_d_can.py
arx_d_can/: __init__.py
arx_d_can/actuator/: __init__.py  arx_d_can.py
arx_d_can/config/: arx_d_can_dm.yaml  models.yaml  yunyi_v1_0_left.yaml  yunyi_v1_0_right.yaml
arx_d_can/controllers/: __init__.py  arx_d_can_endpose_controller.py
arx_d_can/dynamics/: derivatives.py  forward_dynamics.py  inertia.py  inverse_dynamics.py
arx_d_can/examples/: README.md  __init__.py  common.py  example_01_scan_ids.py  example_02_read_state.py  (+9 more)
config/: arx_d_can.yaml  arx_d_can_dm.yaml
controllers/: __init__.py
driver/: __init__.py  motor_drive_layer_backend.py
dynamics/: forward_dynamics.py  inertia.py  inverse_dynamics.py
examples/: README.md  __init__.py  common.py  example_01_scan_ids.py  example_02_read_state.py  example_04_send_position.py  example_06_benchmark_read_rate.py  example_08_return_zero.py
kinematics/: forward_kinematics.py  robot_model.py
models/: Alicia_M_1_2_follower_ARX.urdf
sdk/: __init__.py
service_tools/: joint_load_probe.py
tests/: test_benchmark_example.py  test_change_damiao_id_example.py  test_damiao_only.py  test_diagnose_status_example.py  test_joint_trajectory.py  test_model_profiles.py  test_motor_drive_layer_backend.py  test_record_and_replay_example.py  test_safety.py  test_send_position_example.py  test_set_zero_current_position_example.py  test_yunyi_profiles.py
trajectory/: joint_sampler.py  trajectory_planner.py
(+28 files in other folders)
